--- a/src/RhythmCore/RhythmCore.csproj
+++ b/src/RhythmCore/RhythmCore.csproj
@@ -181,12 +181,14 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if $(ConfigurationName) == Release xcopy "$(ProjectDir)bin\Release\RhythmCore.dll" "$(AppData)\Dynamo\Dynamo Revit\2.12\packages\Rhythm\bin" /Y /I
+    <PostBuildEvent>if $(ConfigurationName) == Release xcopy "$(ProjectDir)bin\Release\RhythmCore.dll" "$(AppData)\Dynamo\Dynamo Revit\2.6\packages\Rhythm\bin" /Y /I
+if $(ConfigurationName) == Release xcopy "$(ProjectDir)bin\Release\RhythmCore.xml" "$(AppData)\Dynamo\Dynamo Revit\2.6\packages\Rhythm\bin" /Y /I
+
+if $(ConfigurationName) == Release xcopy "$(ProjectDir)bin\Release\RhythmCore.dll" "$(AppData)\Dynamo\Dynamo Revit\2.12\packages\Rhythm\bin" /Y /I
 if $(ConfigurationName) == Release xcopy "$(ProjectDir)bin\Release\RhythmCore.xml" "$(AppData)\Dynamo\Dynamo Revit\2.12\packages\Rhythm\bin" /Y /I
 
 if $(ConfigurationName) == Release xcopy "$(ProjectDir)bin\Release\RhythmCore.dll" "$(AppData)\Dynamo\Dynamo Revit\2.13\packages\Rhythm\bin" /Y /I
 if $(ConfigurationName) == Release xcopy "$(ProjectDir)bin\Release\RhythmCore.xml" "$(AppData)\Dynamo\Dynamo Revit\2.13\packages\Rhythm\bin" /Y /I
-
 
 if $(ConfigurationName) == Release xcopy "$(ProjectDir)bin\Release\RhythmCore.dll" "$(AppData)\Dynamo\Dynamo Core\2.15\packages\Rhythm\bin" /Y /I
 if $(ConfigurationName) == Release xcopy "$(ProjectDir)bin\Release\RhythmCore.xml" "$(AppData)\Dynamo\Dynamo Core\2.15\packages\Rhythm\bin" /Y /I</PostBuildEvent>
