--- a/src/RhythmCore/RhythmCore.2023/RhythmCore.2023.csproj
+++ b/src/RhythmCore/RhythmCore.2023/RhythmCore.2023.csproj
@@ -30,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\RhythmCore.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DesignScriptBuiltin, Version=2.16.0.2501, Culture=neutral, processorArchitecture=MSIL">
