--- a/src/Rhythm/Rhythm.2021/RhythmRevit.2021.csproj
+++ b/src/Rhythm/Rhythm.2021/RhythmRevit.2021.csproj
@@ -34,111 +34,96 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AdWindows, Version=3.0.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Revit_All_Main_Versions_API_x64.2021.1.4\lib\net48\AdWindows.dll</HintPath>
+      <HintPath>..\..\packages\Revit_All_Main_Versions_API_x64.2021.0.0\lib\net48\AdWindows.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
     </Reference>
     <Reference Include="Analysis, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.DynamoCoreNodes.2.6.2.15694\lib\net47\Analysis.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.DynamoCoreNodes.2.6.2.15694\lib\net47\Analysis.dll</HintPath>
     </Reference>
     <Reference Include="DesignScriptBuiltin, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DesignScriptBuiltin.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DesignScriptBuiltin.dll</HintPath>
     </Reference>
     <Reference Include="DSCoreNodes, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.DynamoCoreNodes.2.6.2.15694\lib\net47\DSCoreNodes.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.DynamoCoreNodes.2.6.2.15694\lib\net47\DSCoreNodes.dll</HintPath>
     </Reference>
     <Reference Include="DSIronPython, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DSIronPython.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DSIronPython.dll</HintPath>
     </Reference>
     <Reference Include="DynamoApplications, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DynamoApplications.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DynamoApplications.dll</HintPath>
     </Reference>
     <Reference Include="DynamoCore, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DynamoCore.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DynamoCore.dll</HintPath>
     </Reference>
     <Reference Include="DynamoInstallDetective, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DynamoInstallDetective.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DynamoInstallDetective.dll</HintPath>
     </Reference>
     <Reference Include="DynamoServices, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.DynamoServices.2.6.2.15694\lib\net47\DynamoServices.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.DynamoServices.2.6.2.15694\lib\net47\DynamoServices.dll</HintPath>
     </Reference>
     <Reference Include="DynamoShapeManager, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DynamoShapeManager.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DynamoShapeManager.dll</HintPath>
     </Reference>
     <Reference Include="DynamoUnits, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.6.2.15694\lib\net47\DynamoUnits.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.6.2.15694\lib\net47\DynamoUnits.dll</HintPath>
     </Reference>
     <Reference Include="DynamoUtilities, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DynamoUtilities.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DynamoUtilities.dll</HintPath>
     </Reference>
     <Reference Include="GeometryColor, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.DynamoCoreNodes.2.6.2.15694\lib\net47\GeometryColor.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.DynamoCoreNodes.2.6.2.15694\lib\net47\GeometryColor.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Expression.Interactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Prism.4.1.0.0\lib\NET40\Microsoft.Expression.Interactions.dll</HintPath>
+      <HintPath>..\..\packages\Prism.4.1.0.0\lib\NET40\Microsoft.Expression.Interactions.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.Prism, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Prism.4.1.0.0\lib\NET40\Microsoft.Practices.Prism.dll</HintPath>
+      <HintPath>..\..\packages\Prism.4.1.0.0\lib\NET40\Microsoft.Practices.Prism.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.Prism.Interactivity, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Prism.4.1.0.0\lib\NET40\Microsoft.Practices.Prism.Interactivity.dll</HintPath>
+      <HintPath>..\..\packages\Prism.4.1.0.0\lib\NET40\Microsoft.Practices.Prism.Interactivity.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <HintPath>..\..\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="ProtoCore, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\ProtoCore.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\ProtoCore.dll</HintPath>
     </Reference>
     <Reference Include="ProtoGeometry, Version=2.6.0.8195, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.6.2.15694\lib\net47\ProtoGeometry.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.6.2.15694\lib\net47\ProtoGeometry.dll</HintPath>
     </Reference>
     <Reference Include="RevitAPI, Version=21.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Revit_All_Main_Versions_API_x64.2021.1.4\lib\net48\RevitAPI.dll</HintPath>
+      <HintPath>..\..\packages\Revit_All_Main_Versions_API_x64.2021.0.0\lib\net48\RevitAPI.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI, Version=21.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Revit_All_Main_Versions_API_x64.2021.1.4\lib\net48\RevitAPIUI.dll</HintPath>
+      <HintPath>..\..\packages\Revit_All_Main_Versions_API_x64.2021.0.0\lib\net48\RevitAPIUI.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitNodes, Version=2.6.1.8850, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.6.1.8850\lib\RevitNodes.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.Revit.2.6.1.8850\lib\RevitNodes.dll</HintPath>
     </Reference>
     <Reference Include="RevitServices, Version=2.6.1.8850, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.6.1.8850\lib\RevitServices.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.Revit.2.6.1.8850\lib\RevitServices.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Collections.Immutable, Version=1.2.5.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Collections.Immutable.1.7.1\lib\net461\System.Collections.Immutable.dll</HintPath>
-    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
-    </Reference>
     <Reference Include="System.Numerics" />
-    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.3\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
-    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Prism.4.1.0.0\lib\NET40\System.Windows.Interactivity.dll</HintPath>
+      <HintPath>..\..\packages\Prism.4.1.0.0\lib\NET40\System.Windows.Interactivity.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Presentation" />
     <Reference Include="System.Xml.Linq" />
@@ -148,12 +133,12 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UIFramework, Version=21.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Revit_All_Main_Versions_API_x64.2021.1.4\lib\net48\UIFramework.dll</HintPath>
+      <HintPath>..\..\packages\Revit_All_Main_Versions_API_x64.2021.0.0\lib\net48\UIFramework.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
     </Reference>
     <Reference Include="VMDataBridge, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\VMDataBridge.dll</HintPath>
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\VMDataBridge.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
